* HEader section - background update (new background pattern and pigeon) * Small update for other elements (cosmic background for last bar above footer) * Bugfix for mobile (wrong margins for elements in navigation and wrong size for tyitles and images) * I added target="_blank" for links in media section * Update gallery (new artworks)

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,10 @@ html {
 }
 
 body {
+    background-image: url(../images/tlo_cale.svg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: top center;
     font-family: 'Asap Condensed', sans-serif;
     font-weight: 400;
     color: #000000;
@@ -55,15 +59,15 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 2rem;
     padding: .6rem 1.5rem .6rem 1rem;
     border-width: 4px;
+    border-color: #ffddfa !important;
 }
 
 .border {
     border-width: 5px !important;
-    border-color: #ffffff !important;
+    border-color: #ffddfa !important;
 }
 
 footer {
-    margin-top: 2rem;
     padding: 2rem;
     color: #ffffff;
     font-size: 1.2rem;
@@ -77,8 +81,17 @@ footer {
     width: 25rem;
 }
 
+@media (max-width: 767px) {
+    .component-header img {
+        width: 100%;
+    }    
+}
+
 .component-about-me {
     font-size: 1.25rem;
+}
+.component-about-me .border{
+    border-color: #ffffff !important;
 }
 
 .component-about-me .h2 {
@@ -170,7 +183,6 @@ footer {
     display: block;
     width: 100%;
     margin: 1rem 0;
-    border-color: #ffddfa !important;
 }
 
 .component-gallery .box .spinner-border {
@@ -209,7 +221,9 @@ footer {
 }
 
 @media (max-width: 992px) {
-    .component-navigation .nav-item > a {
+    .component-navigation .nav-item > a,
+    .component-navigation .nav-item > .dropdown,
+    .component-navigation .nav-item > .dropdown > button {
         width: 100%;
     }
 }
@@ -236,10 +250,11 @@ footer {
 .shrink.component-navigation .nav-item > .dropdown > .btn {
     font-size: 1rem;
     padding: 0.5rem;
-    margin: 0;
+    margin: 0!important;
+    border-color: #000000 !important;
 }
 
-.shrink.component-navigation .navbar-toggler {
+.component-navigation .navbar-toggler {
     background-color: #ffffff;
 }
 
@@ -364,4 +379,44 @@ hr.dark-white {
 
 #forieusers {
     display: none;
+}
+
+.cosmic-bar {
+    height: 2rem;
+    background-image: url(../images/bg_galaxy.svg);
+    background-repeat: repeat-x;
+    background-position: center;
+    background-size: 50%;
+}
+
+@media (max-width: 992px) {
+    .display-1 {
+        font-size: 4rem;
+    }
+}
+
+.golabek {
+    position: absolute;
+    top: 0;
+    left: 25%;
+    z-index: 100;
+    display: block;
+    height: 25rem;
+    width: 15rem;
+    background-image: url(../images/golabek_od_gory.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+
+@media (max-width: 767px) {
+    .golabek {
+        display: none;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+    .golabek {
+        left: 10%;
+    }
 }
